# LlamaGPTJ-chat

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  prompt_template_sample.txt
.github/workflows/: cmake-release.yml  cmake.yml  cmake_branch.yml  publish-wiki.yml
cmake/: config.h.in
gpt4all-backend/: CMakeLists.txt  llmodel_c.cpp  mpt.cpp
llmodel/: CMakeLists.txt  gptj.cpp  gptj.h  llamamodel.cpp  llamamodel.h  llmodel.h  llmodel_c.cpp  llmodel_c.h
src/: CMakeLists.txt  chat.cpp  header.h  openai.h  parse_json.h  utils.h
